Clean up project indexing and loading code